--- a/browser/js/about/about.html
+++ b/browser/js/about/about.html
@@ -1,7 +1,16 @@
-<section id="about">
-	<form ng-submit="login(username)">
-		Username<input type="text" ng-model="username">
-		Submit <input type="submit">
+<div class="paddingTop">
+	
+<form id="login-form" name="loginForm" ng-submit="login(username)">
 
-	</form>    
-</section>
+    <div class="form-group">
+        <label for="email">Pick a Username</label>
+        <input type="text" ng-model="username" class="form-control" placeholder="Username">
+    </div>
+    <div class="form-group">
+        <label for="login-password">Pick a room</label>
+        <input type="text" class="form-control" id="login-password" placeholder="Room">
+    </div>
+    <button type="submit" class="btn btn-default">Submit</button>
+</form>
+
+</div>
